[gd_scene load_steps=8 format=3 uid="uid://d3txy4sbnbc6e"]

[ext_resource type="Script" path="res://Scripts/MusicController.gd" id="1_xu5k4"]
[ext_resource type="AudioStream" uid="uid://dd30thq1p7i61" path="res://Music/Sprouts.ogg" id="2_8xn48"]
[ext_resource type="AudioStream" uid="uid://det5wx7jwchyj" path="res://SFX/tone.wav" id="3_w3ej0"]
[ext_resource type="AudioStream" uid="uid://bgccvpqua3ulw" path="res://SFX/synth.wav" id="4_1ijao"]
[ext_resource type="AudioStream" uid="uid://dhnvrgoy6k3ru" path="res://SFX/pickupCoin.wav" id="4_2wyiw"]
[ext_resource type="AudioStream" uid="uid://l5ywug1w5d8" path="res://SFX/jump.wav" id="5_6d3mn"]
[ext_resource type="AudioStream" uid="uid://cdxoraeku3870" path="res://SFX/checkpoint.wav" id="7_gbyph"]

[node name="MusicController" type="Node"]
process_mode = 3
script = ExtResource("1_xu5k4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8xn48")
autoplay = true
bus = &"Music"

[node name="DeathSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w3ej0")
bus = &"Sound"

[node name="CollectSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2wyiw")
volume_db = -3.0
pitch_scale = 0.8
bus = &"Sound"

[node name="GravitySFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1ijao")
bus = &"Sound"

[node name="JumpSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6d3mn")
volume_db = -3.0
bus = &"Sound"

[node name="CheckpointPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gbyph")
volume_db = -3.0
bus = &"Sound"
